# cpp-lab-3

./: CMakeLists.txt  README.md  main.cpp
src/: App.cpp  App.h
src/Geometry/: Square.cpp  Square.h
src/Service/: ConsoleDisplayService.cpp  ConsoleDisplayService.h  DisplayServiceInterface.h  FileService.cpp  FileService.h
